# controllers/booking_capster/cont_booking_capster.go
@@ -27,51 +27,51 @@ func NewContBookingCapster(e *echo.Echo, a ibookingcapster.Usecase) {
 	r := e.Group("/user/booking_capster")
 	r.Use(midd.JWT)
 	r.Use(midd.Versioning)
-	r.POST("", controller.Create)
+	// r.POST("", controller.Create)
 	r.GET("", controller.GetDataBy)
 }
 
-// CreateBookingCapster :
-// @Summary Add Booking Capster
-// @Security ApiKeyAuth
-// @Tags BookingCapster
-// @Produce json
-// @Param OS header string true "OS Device"
-// @Param Version header string true "OS Device"
-// @Param req body models.AddBookingCapster true "req param #changes are possible to adjust the form of the registration form from frontend"
-// @Success 200 {object} tool.ResponseModel
-// @Router /user/booking_capster [post]
-func (u *ContBookingCapster) Create(e echo.Context) error {
-	ctx := e.Request().Context()
-	if ctx == nil {
-		ctx = context.Background()
-	}
+// // CreateBookingCapster :
+// // @Summary Add Booking Capster
+// // @Security ApiKeyAuth
+// // @Tags BookingCapster
+// // @Produce json
+// // @Param OS header string true "OS Device"
+// // @Param Version header string true "OS Device"
+// // @Param req body models.AddBookingCapster true "req param #changes are possible to adjust the form of the registration form from frontend"
+// // @Success 200 {object} tool.ResponseModel
+// // @Router /user/booking_capster [post]
+// func (u *ContBookingCapster) Create(e echo.Context) error {
+// 	ctx := e.Request().Context()
+// 	if ctx == nil {
+// 		ctx = context.Background()
+// 	}
 
-	var (
-		logger = logging.Logger{} // wajib
-		appE   = tool.Res{R: e}   // wajib
-		form   models.AddBookingCapster
-	)
+// 	var (
+// 		logger = logging.Logger{} // wajib
+// 		appE   = tool.Res{R: e}   // wajib
+// 		form   models.AddBookingCapster
+// 	)
 
-	// validasi and bind to struct
-	httpCode, errMsg := app.BindAndValid(e, &form)
-	logger.Info(util.Stringify(form))
-	if httpCode != 200 {
-		return appE.ResponseError(http.StatusBadRequest, errMsg, nil)
-	}
+// 	// validasi and bind to struct
+// 	httpCode, errMsg := app.BindAndValid(e, &form)
+// 	logger.Info(util.Stringify(form))
+// 	if httpCode != 200 {
+// 		return appE.ResponseError(http.StatusBadRequest, errMsg, nil)
+// 	}
 
-	claims, err := app.GetClaims(e)
-	if err != nil {
-		return appE.ResponseError(http.StatusBadRequest, fmt.Sprintf("%v", err), nil)
-	}
+// 	claims, err := app.GetClaims(e)
+// 	if err != nil {
+// 		return appE.ResponseError(http.StatusBadRequest, fmt.Sprintf("%v", err), nil)
+// 	}
 
-	err = u.useBookingCapster.Create(ctx, claims, &form)
-	if err != nil {
-		return appE.ResponseError(tool.GetStatusCode(err), fmt.Sprintf("%v", err), nil)
-	}
+// 	err = u.useBookingCapster.Create(ctx, claims, &form)
+// 	if err != nil {
+// 		return appE.ResponseError(tool.GetStatusCode(err), fmt.Sprintf("%v", err), nil)
+// 	}
 
-	return appE.Response(http.StatusCreated, "Ok", nil)
-}
+// 	return appE.Response(http.StatusCreated, "Ok", nil)
+// }
 
 // GetDataByBookingCapster :
 // @Summary GetData Booking Capster
