# docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "Backend REST API for golang nuryanto2121",
-        "title": "Starter",
+        "title": "Rest API User",
         "contact": {
             "name": "Nuryanto",
             "url": "https://www.linkedin.com/in/nuryanto-1b2721156/",
@@ -780,53 +780,6 @@
                         }
                     }
                 }
-            },
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "BookingCapster"
-                ],
-                "summary": "Add Booking Capster",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "OS Device",
-                        "name": "OS",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "OS Device",
-                        "name": "Version",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "req param #changes are possible to adjust the form of the registration form from frontend",
-                        "name": "req",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.AddBookingCapster"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/tool.ResponseModel"
-                        }
-                    }
-                }
             }
         },
         "/user/capster": {
@@ -1131,6 +1084,20 @@
                         "required": true
                     },
                     {
+                        "type": "number",
+                        "description": "Latitude",
+                        "name": "latitude",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "Longitude",
+                        "name": "longitude",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "Page",
                         "name": "page",
@@ -1255,6 +1222,20 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "Latitude",
+                        "name": "latitude",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "Longitude",
+                        "name": "longitude",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1278,7 +1259,7 @@
                 "tags": [
                     "Order"
                 ],
-                "summary": "Rubah Profile",
+                "summary": "Cancel Order user",
                 "parameters": [
                     {
                         "type": "string",
@@ -1307,7 +1288,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.OrderPost"
+                            "$ref": "#/definitions/models.OrderStatus"
                         }
                     }
                 ],
@@ -1690,20 +1671,6 @@
                 }
             }
         },
-        "models.AddBookingCapster": {
-            "type": "object",
-            "properties": {
-                "barber_id": {
-                    "type": "integer"
-                },
-                "booking_date": {
-                    "type": "string"
-                },
-                "capster_id": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.AddUser": {
             "type": "object",
             "properties": {
@@ -1843,23 +1810,23 @@
                 "capster_id": {
                     "type": "integer"
                 },
-                "customer_name": {
-                    "type": "string"
-                },
                 "order_date": {
                     "type": "string"
                 },
                 "paket_ids": {
+                    "description": "UserID       int          `json:\"user_id,omitempty\"`\nCustomerName string       `json:\"customer_name\" valid:\"Required\"`\nTelp         string       `json:\"telp,omitempty\"`",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.OrderDPost"
                     }
-                },
-                "telp": {
+                }
+            }
+        },
+        "models.OrderStatus": {
+            "type": "object",
+            "properties": {
+                "status": {
                     "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
